--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+      @apply bg-[#838383] text-white hover:bg-primary hover:text-black hover:bg-black hover:text-primary;
+    }
+    .btn-secondary {
+      @apply bg-third text-black;
+    }
+    .form-parent{
+      @apply grid grid-cols-12 gap-4;
+    }
+    .form-child{
+      @apply lg:col-span-4 sm:col-span-6 col-span-12;
+    }
+  }
