--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base{
+  :root{
+    --grey-black : #00000080;
+  }
+}
+
 @layer components {
     .btn-primary {
       @apply bg-[#838383] text-white hover:bg-primary hover:text-black hover:bg-black hover:text-primary;
