--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
       @apply bg-[#838383] text-white hover:bg-primary hover:text-black hover:bg-black hover:text-primary;
     }
     .btn-secondary {
-      @apply bg-third text-black;
+      @apply bg-primary10 text-black;
     }
     .form-parent{
       @apply grid grid-cols-12 gap-4;
