--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     font-family: 'Manrope', sans-serif;
 }
 
+:root{
+    --secondary : #F1C40F;
+}
+
 .ant-menu-submenu-title {
     display: flex !important;
     align-items: center;
