--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@
     .form-child{
       @apply lg:col-span-4 sm:col-span-6 col-span-12;
     }
+    .form-child-2{
+      @apply lg:col-span-6 sm:col-span-6 col-span-12;
+    }
 
     .pin-field {
       @apply w-[3rem] h-[3rem] text-center text-2xl shadow-inset border-[#EBEAED] border-[1px] border-solid ;
